BLDC_speed/build/log/idf_py_stdout_output_95070
[1/10] Performing build step for 'bootloader'
[1/1] cd /Users/shady/Desktop/BLDC-motor/BLDC_speed/build/bootloader/esp-idf/esptool_py && /Users/shady/.espressif/python_env/idf5.2_py3.10_env/bin/python /Users/shady/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/shady/Desktop/BLDC-motor/BLDC_speed/build/bootloader/bootloader.bin
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[2/10] No install step for 'bootloader'
[3/10] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/BLDC_speed.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/BLDC_speed.cpp.obj 
/Users/shady/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.2.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/shady/Desktop/BLDC-motor/BLDC_speed/build/config -I/Users/shady/Desktop/BLDC-motor/BLDC_speed/main -I/Users/shady/Desktop/BLDC-motor/BLDC_speed/main/BLDCPulseCalculator -I/Users/shady/Desktop/BLDC-motor/BLDC_speed/main/Uart -I/Users/shady/esp/esp-idf/components/newlib/platform_include -I/Users/shady/esp/esp-idf/components/freertos/config/include -I/Users/shady/esp/esp-idf/components/freertos/config/include/freertos -I/Users/shady/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/shady/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/shady/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/shady/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/shady/esp/esp-idf/components/freertos/esp_additions/include -I/Users/shady/esp/esp-idf/components/esp_hw_support/include -I/Users/shady/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/shady/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/shady/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/shady/esp/esp-idf/components/heap/include -I/Users/shady/esp/esp-idf/components/log/include -I/Users/shady/esp/esp-idf/components/soc/include -I/Users/shady/esp/esp-idf/components/soc/esp32 -I/Users/shady/esp/esp-idf/components/soc/esp32/include -I/Users/shady/esp/esp-idf/components/hal/platform_port/include -I/Users/shady/esp/esp-idf/components/hal/esp32/include -I/Users/shady/esp/esp-idf/components/hal/include -I/Users/shady/esp/esp-idf/components/esp_rom/include -I/Users/shady/esp/esp-idf/components/esp_rom/include/esp32 -I/Users/shady/esp/esp-idf/components/esp_rom/esp32 -I/Users/shady/esp/esp-idf/components/esp_common/include -I/Users/shady/esp/esp-idf/components/esp_system/include -I/Users/shady/esp/esp-idf/components/esp_system/port/soc -I/Users/shady/esp/esp-idf/components/esp_system/port/include/private -I/Users/shady/esp/esp-idf/components/xtensa/esp32/include -I/Users/shady/esp/esp-idf/components/xtensa/include -I/Users/shady/esp/esp-idf/components/xtensa/deprecated_include -I/Users/shady/esp/esp-idf/components/lwip/include -I/Users/shady/esp/esp-idf/components/lwip/include/apps -I/Users/shady/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/shady/esp/esp-idf/components/lwip/lwip/src/include -I/Users/shady/esp/esp-idf/components/lwip/port/include -I/Users/shady/esp/esp-idf/components/lwip/port/freertos/include -I/Users/shady/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/shady/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/shady/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/shady/esp/esp-idf/components/driver/include -I/Users/shady/esp/esp-idf/components/driver/deprecated -I/Users/shady/esp/esp-idf/components/driver/analog_comparator/include -I/Users/shady/esp/esp-idf/components/driver/dac/include -I/Users/shady/esp/esp-idf/components/driver/gpio/include -I/Users/shady/esp/esp-idf/components/driver/gptimer/include -I/Users/shady/esp/esp-idf/components/driver/i2c/include -I/Users/shady/esp/esp-idf/components/driver/i2s/include -I/Users/shady/esp/esp-idf/components/driver/ledc/include -I/Users/shady/esp/esp-idf/components/driver/mcpwm/include -I/Users/shady/esp/esp-idf/components/driver/parlio/include -I/Users/shady/esp/esp-idf/components/driver/pcnt/include -I/Users/shady/esp/esp-idf/components/driver/rmt/include -I/Users/shady/esp/esp-idf/components/driver/sdio_slave/include -I/Users/shady/esp/esp-idf/components/driver/sdmmc/include -I/Users/shady/esp/esp-idf/components/driver/sigma_delta/include -I/Users/shady/esp/esp-idf/components/driver/spi/include -I/Users/shady/esp/esp-idf/components/driver/temperature_sensor/include -I/Users/shady/esp/esp-idf/components/driver/touch_sensor/include -I/Users/shady/esp/esp-idf/components/driver/twai/include -I/Users/shady/esp/esp-idf/components/driver/uart/include -I/Users/shady/esp/esp-idf/components/driver/usb_serial_jtag/include -I/Users/shady/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/Users/shady/esp/esp-idf/components/esp_pm/include -I/Users/shady/esp/esp-idf/components/esp_ringbuf/include -I/Users/shady/esp/esp-idf/components/esp_timer/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/shady/Desktop/BLDC-motor/BLDC_speed=. -fmacro-prefix-map=/Users/shady/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/BLDC_speed.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/BLDC_speed.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/BLDC_speed.cpp.obj -c /Users/shady/Desktop/BLDC-motor/BLDC_speed/main/BLDC_speed.cpp
In file included from /Users/shady/Desktop/BLDC-motor/BLDC_speed/main/GLOBALS.hpp:4,
                 from /Users/shady/Desktop/BLDC-motor/BLDC_speed/main/BLDC_speed.cpp:1:
/Users/shady/Desktop/BLDC-motor/BLDC_speed/main/BLDCPulseCalculator/BLDCPulseCalculator.hpp:43:8: warning: 'always_inline' function might not be inlinable [-Wattributes]
   43 |   void begin(const BaseType_t = 1) __attribute__((always_inline));
      |        ^~~~~
/Users/shady/Desktop/BLDC-motor/BLDC_speed/main/BLDCPulseCalculator/BLDCPulseCalculator.hpp: In function 'void app_main()':
/Users/shady/Desktop/BLDC-motor/BLDC_speed/main/BLDCPulseCalculator/BLDCPulseCalculator.hpp:43:8: error: inlining failed in call to 'always_inline' 'void BLDCPulseCalculator::begin(BaseType_t)': function body not available
/Users/shady/Desktop/BLDC-motor/BLDC_speed/main/BLDC_speed.cpp:10:21: note: called from here
   10 |     PMSMMotor2.begin(app_cpu1);
      |     ~~~~~~~~~~~~~~~~^~~~~~~~~~
/Users/shady/Desktop/BLDC-motor/BLDC_speed/main/BLDCPulseCalculator/BLDCPulseCalculator.hpp:43:8: error: inlining failed in call to 'always_inline' 'void BLDCPulseCalculator::begin(BaseType_t)': function body not available
   43 |   void begin(const BaseType_t = 1) __attribute__((always_inline));
      |        ^~~~~
/Users/shady/Desktop/BLDC-motor/BLDC_speed/main/BLDC_speed.cpp:9:21: note: called from here
    9 |     PMSMMotor1.begin(app_cpu0);
      |     ~~~~~~~~~~~~~~~~^~~~~~~~~~
[4/10] Completed 'bootloader'
[5/10] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/BLDCPulseCalculator/BLDCPulseCalculator.cpp.obj
/Users/shady/Desktop/BLDC-motor/BLDC_speed/main/BLDCPulseCalculator/BLDCPulseCalculator.cpp:71:6: warning: 'always_inline' function might not be inlinable [-Wattributes]
   71 | void BLDCPulseCalculator::begin(const BaseType_t app_cpu) {
      |      ^~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
